--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
